// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateAudioGame should return the correct number of questions when data has enough ENGLISH words 1`] = `
{
  "questions": [
    {
      "additionalInfo": {
        "examples": [],
        "imgUrl": "https://example.com/images/apple.jpg",
        "shortDef": "<b>apple means</b> Round fruit with red or green skin.",
      },
      "answer": [
        "apple",
        "appel",
        "aple",
      ],
      "question": [
        "https://example.com/audio/apple.mp3",
      ],
      "wordId": "1",
    },
    {
      "additionalInfo": {
        "examples": [],
        "imgUrl": "https://example.com/images/orange.jpg",
        "shortDef": "<b>orange means</b> Citrus fruit with orange rind.",
      },
      "answer": [
        "orange",
        "oranj",
        "orenge",
      ],
      "question": [
        "https://example.com/audio/orange.mp3",
      ],
      "wordId": "2",
    },
    {
      "additionalInfo": {
        "examples": [],
        "imgUrl": "https://example.com/images/banana.jpg",
        "shortDef": "<b>banana means</b> Curved fruit with yellow skin.",
      },
      "answer": [
        "banana",
      ],
      "question": [
        "https://example.com/audio/banana.mp3",
      ],
      "wordId": "3",
    },
    {
      "additionalInfo": {
        "examples": [],
        "imgUrl": "https://example.com/images/strawberry.jpg",
        "shortDef": "<b>strawberry means</b> Soft red fruit with seeds.",
      },
      "answer": [
        "strawberry",
        "strawbery",
        "straw-berry",
      ],
      "question": [
        "https://example.com/audio/strawberry.mp3",
      ],
      "wordId": "4",
    },
    {
      "additionalInfo": {
        "examples": [],
        "imgUrl": "https://example.com/images/pineapple.jpg",
        "shortDef": "<b>pineapple means</b> Tropical fruit with spiky rind.",
      },
      "answer": [
        "pineapple",
      ],
      "question": [
        "https://example.com/audio/pineapple.mp3",
      ],
      "wordId": "5",
    },
    {
      "additionalInfo": {
        "examples": [],
        "imgUrl": "https://example.com/images/grape.jpg",
        "shortDef": "<b>grape means</b> Small juicy fruit with smooth skin.",
      },
      "answer": [
        "grape",
        "grap",
        "greyp",
      ],
      "question": [
        "https://example.com/audio/grape.mp3",
      ],
      "wordId": "6",
    },
  ],
  "task": "Type the word that you've heard",
  "type": "AUDIO",
}
`;

exports[`generateAudioGame should return the correct number of questions when data has enough SPANISH words 1`] = `
{
  "questions": [
    {
      "additionalInfo": {
        "examples": [
          {
            "text": "Ella comió una manzana roja para el desayuno.",
            "translation": "She ate a red apple for breakfast.",
          },
        ],
        "imgUrl": "https://example.com/images/manzana.jpg",
        "shortDef": "<b>manzana means</b> Round fruit with red or green skin.",
      },
      "answer": [
        "manzana",
        "manzana",
        "manzána",
      ],
      "question": [
        "https://example.com/audio/manzana.mp3",
      ],
      "wordId": "1",
    },
    {
      "additionalInfo": {
        "examples": [
          {
            "text": "Ella bebió jugo de naranja fresco esta mañana.",
            "translation": "She drank fresh orange juice this morning.",
          },
          {
            "text": "Llamaban la naranja “fruta del sol” por su color.",
            "translation": "They called the orange "sun fruit" because of its color.",
          },
        ],
        "imgUrl": "https://example.com/images/naranja.jpg",
        "shortDef": "<b>naranja means</b> Citrus fruit with orange rind.",
      },
      "answer": [
        "naranja",
        "naranga",
        "naranj",
      ],
      "question": [
        "https://example.com/audio/naranja.mp3",
      ],
      "wordId": "2",
    },
    {
      "additionalInfo": {
        "examples": [
          {
            "text": "Para evitar que se pegue, es mejor engrasar la sartén antes de freír.",
            "translation": "To prevent sticking, it's best to powder the pan before frying.",
          },
        ],
        "imgUrl": "https://example.com/images/skillet.jpg",
        "shortDef": "<b>sartén means</b> skillet",
      },
      "answer": [
        "sartén",
      ],
      "question": [
        "https://example.com/audio/platano.mp3",
      ],
      "wordId": "3",
    },
    {
      "additionalInfo": {
        "examples": [
          {
            "text": "Ella recogió una fresa madura del jardín.",
            "translation": "She picked a ripe strawberry from the garden.",
          },
        ],
        "imgUrl": "https://example.com/images/fresa.jpg",
        "shortDef": "<b>fresa means</b> Soft red fruit with seeds.",
      },
      "answer": [
        "fresa",
        "freza",
        "fre-sá",
      ],
      "question": [
        "https://example.com/audio/fresa.mp3",
      ],
      "wordId": "4",
    },
    {
      "additionalInfo": {
        "examples": [
          {
            "text": "Hicieron un batido de piña.",
            "translation": "They made a pineapple smoothie.",
          },
        ],
        "imgUrl": "https://example.com/images/pina.jpg",
        "shortDef": "<b>piña means</b> Tropical fruit with spiky rind.",
      },
      "answer": [
        "piña",
        "pina",
        "pi-ñá",
      ],
      "question": [
        "https://example.com/audio/pina.mp3",
      ],
      "wordId": "5",
    },
    {
      "additionalInfo": {
        "examples": [
          {
            "text": "Aproveche el servicio de translado de la más alta calidad.",
            "translation": "ake advantage of the highest quality transfer service.",
          },
        ],
        "imgUrl": "https://example.com/images/translado.jpg",
        "shortDef": "<b>translado means</b> transfer.",
      },
      "answer": [
        "translado",
      ],
      "question": [
        "https://example.com/audio/translado.mp3",
      ],
      "wordId": "6",
    },
  ],
  "task": "Type the word that you've heard",
  "type": "AUDIO",
}
`;

exports[`generateAudioGame should return the correct number of questions when with minimal ENGLISH words 1`] = `
{
  "questions": [
    {
      "additionalInfo": {
        "examples": [],
        "imgUrl": "https://example.com/images/apple.jpg",
        "shortDef": "<b>apple means</b> Round fruit with red or green skin.",
      },
      "answer": [
        "apple",
        "appel",
        "aple",
      ],
      "question": [
        "https://example.com/audio/apple.mp3",
      ],
      "wordId": "1",
    },
  ],
  "task": "Type the word that you've heard",
  "type": "AUDIO",
}
`;

exports[`generateAudioGame should return the correct number of questions when with minimal SPANISH words 1`] = `
{
  "questions": [
    {
      "additionalInfo": {
        "examples": [
          {
            "text": "Ella comió una manzana roja para el desayuno.",
            "translation": "She ate a red apple for breakfast.",
          },
        ],
        "imgUrl": "https://example.com/images/manzana.jpg",
        "shortDef": "<b>manzana means</b> Round fruit with red or green skin.",
      },
      "answer": [
        "manzana",
        "manzana",
        "manzána",
      ],
      "question": [
        "https://example.com/audio/manzana.mp3",
      ],
      "wordId": "1",
    },
  ],
  "task": "Type the word that you've heard",
  "type": "AUDIO",
}
`;
